main/java/droidsafe/speclang/DroidSafeParser.java
// $ANTLR 3.4 /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g 2013-01-09 15:50:21
package droidsafe.speclang;
   import org.slf4j.Logger;
   import org.slf4j.LoggerFactory;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class DroidSafeParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTION_NAME", "API_ACTION", "API_CALL", "ARGS", "BOOLEAN_VALUE", "CHAR_LITERAL", "CHAR_VALUE", "CLASS", "CLASS_VALUE", "COLON", "COMMA", "COMMENT", "CVALUE_LIST", "EQUAL", "ESC_SEQ", "EVENT_BLOCK", "EVENT_BLOCK_DECLS", "FALSE", "HEX_DIGIT", "ID", "INPUT_EVENT", "INT_LITERAL", "INT_VALUE", "LCURLY", "LPAREN", "METHOD", "OCTAL_ESC", "OR_VAL", "PLUS", "RCURLY", "RECEIVER", "RPAREN", "RTYPE", "SEMI", "SPEC", "STMT_LIST", "STRING_LITERAL", "STRING_VALUE", "TRUE", "TYPE_VALUE", "UNICODE_ESC", "WHITELIST", "WS"
    };

    public static final int EOF=-1;
    public static final int ACTION_NAME=4;
    public static final int API_ACTION=5;
    public static final int API_CALL=6;
    public static final int ARGS=7;
    public static final int BOOLEAN_VALUE=8;
    public static final int CHAR_LITERAL=9;
    public static final int CHAR_VALUE=10;
    public static final int CLASS=11;
    public static final int CLASS_VALUE=12;
    public static final int COLON=13;
    public static final int COMMA=14;
    public static final int COMMENT=15;
    public static final int CVALUE_LIST=16;
    public static final int EQUAL=17;
    public static final int ESC_SEQ=18;
    public static final int EVENT_BLOCK=19;
    public static final int EVENT_BLOCK_DECLS=20;
    public static final int FALSE=21;
    public static final int HEX_DIGIT=22;
    public static final int ID=23;
    public static final int INPUT_EVENT=24;
    public static final int INT_LITERAL=25;
    public static final int INT_VALUE=26;
    public static final int LCURLY=27;
    public static final int LPAREN=28;
    public static final int METHOD=29;
    public static final int OCTAL_ESC=30;
    public static final int OR_VAL=31;
    public static final int PLUS=32;
    public static final int RCURLY=33;
    public static final int RECEIVER=34;
    public static final int RPAREN=35;
    public static final int RTYPE=36;
    public static final int SEMI=37;
    public static final int SPEC=38;
    public static final int STMT_LIST=39;
    public static final int STRING_LITERAL=40;
    public static final int STRING_VALUE=41;
    public static final int TRUE=42;
    public static final int TYPE_VALUE=43;
    public static final int UNICODE_ESC=44;
    public static final int WHITELIST=45;
    public static final int WS=46;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DroidSafeParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DroidSafeParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return DroidSafeParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g"; }


        private final static Logger logger = LoggerFactory.getLogger(DroidSafeParser.class);

        public void emitErrorMessage(String msg) {
            logger.error(msg);
        }


    public static class spec_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "spec"
    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:76:1: spec : whitelist ( event_block )* -> ^( SPEC whitelist ^( EVENT_BLOCK_DECLS ( event_block )* ) ) ;
    public final DroidSafeParser.spec_return spec() throws RecognitionException {
        DroidSafeParser.spec_return retval = new DroidSafeParser.spec_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        DroidSafeParser.whitelist_return whitelist1 =null;

        DroidSafeParser.event_block_return event_block2 =null;


        RewriteRuleSubtreeStream stream_event_block=new RewriteRuleSubtreeStream(adaptor,"rule event_block");
        RewriteRuleSubtreeStream stream_whitelist=new RewriteRuleSubtreeStream(adaptor,"rule whitelist");
        try {
            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:77:2: ( whitelist ( event_block )* -> ^( SPEC whitelist ^( EVENT_BLOCK_DECLS ( event_block )* ) ) )
            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:78:5: whitelist ( event_block )*
            {
            pushFollow(FOLLOW_whitelist_in_spec319);
            whitelist1=whitelist();

            state._fsp--;

            stream_whitelist.add(whitelist1.getTree());

            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:79:4: ( event_block )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||LA1_0==INT_LITERAL) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:79:4: event_block
            	    {
            	    pushFollow(FOLLOW_event_block_in_spec324);
            	    event_block2=event_block();

            	    state._fsp--;

            	    stream_event_block.add(event_block2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: event_block, whitelist
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 79:17: -> ^( SPEC whitelist ^( EVENT_BLOCK_DECLS ( event_block )* ) )
            {
                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:79:20: ^( SPEC whitelist ^( EVENT_BLOCK_DECLS ( event_block )* ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(SPEC, "SPEC")
                , root_1);

                adaptor.addChild(root_1, stream_whitelist.nextTree());

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:79:37: ^( EVENT_BLOCK_DECLS ( event_block )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(EVENT_BLOCK_DECLS, "EVENT_BLOCK_DECLS")
                , root_2);

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:79:57: ( event_block )*
                while ( stream_event_block.hasNext() ) {
                    adaptor.addChild(root_2, stream_event_block.nextTree());

                }
                stream_event_block.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "spec"


    public static class whitelist_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "whitelist"
    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:82:1: whitelist : WHITELIST LCURLY ( statement_list )? RCURLY -> ^( WHITELIST ^( STMT_LIST ( statement_list )? ) ) ;
    public final DroidSafeParser.whitelist_return whitelist() throws RecognitionException {
        DroidSafeParser.whitelist_return retval = new DroidSafeParser.whitelist_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token WHITELIST3=null;
        Token LCURLY4=null;
        Token RCURLY6=null;
        DroidSafeParser.statement_list_return statement_list5 =null;


        Object WHITELIST3_tree=null;
        Object LCURLY4_tree=null;
        Object RCURLY6_tree=null;
        RewriteRuleTokenStream stream_LCURLY=new RewriteRuleTokenStream(adaptor,"token LCURLY");
        RewriteRuleTokenStream stream_WHITELIST=new RewriteRuleTokenStream(adaptor,"token WHITELIST");
        RewriteRuleTokenStream stream_RCURLY=new RewriteRuleTokenStream(adaptor,"token RCURLY");
        RewriteRuleSubtreeStream stream_statement_list=new RewriteRuleSubtreeStream(adaptor,"rule statement_list");
        try {
            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:83:5: ( WHITELIST LCURLY ( statement_list )? RCURLY -> ^( WHITELIST ^( STMT_LIST ( statement_list )? ) ) )
            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:83:7: WHITELIST LCURLY ( statement_list )? RCURLY
            {
            WHITELIST3=(Token)match(input,WHITELIST,FOLLOW_WHITELIST_in_whitelist357);  
            stream_WHITELIST.add(WHITELIST3);


            LCURLY4=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_whitelist368);  
            stream_LCURLY.add(LCURLY4);


            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:85:9: ( statement_list )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID||LA2_0==INT_LITERAL) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:85:9: statement_list
                    {
                    pushFollow(FOLLOW_statement_list_in_whitelist378);
                    statement_list5=statement_list();

                    state._fsp--;

                    stream_statement_list.add(statement_list5.getTree());

                    }
                    break;

            }


            RCURLY6=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_whitelist389);  
            stream_RCURLY.add(RCURLY6);


            // AST REWRITE
            // elements: WHITELIST, statement_list
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 86:16: -> ^( WHITELIST ^( STMT_LIST ( statement_list )? ) )
            {
                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:86:19: ^( WHITELIST ^( STMT_LIST ( statement_list )? ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_WHITELIST.nextNode()
                , root_1);

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:86:31: ^( STMT_LIST ( statement_list )? )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(STMT_LIST, "STMT_LIST")
                , root_2);

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:86:43: ( statement_list )?
                if ( stream_statement_list.hasNext() ) {
                    adaptor.addChild(root_2, stream_statement_list.nextTree());

                }
                stream_statement_list.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "whitelist"


    public static class input_event_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "input_event"
    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:90:1: input_event : ( receiver )? cname= ID COLON rt= ID mname= ID LPAREN ( arg_list )? RPAREN -> ^( INPUT_EVENT ^( RECEIVER ( receiver )? ) ^( CLASS $cname) ^( RTYPE $rt) ^( METHOD $mname) ^( ARGS ( arg_list )? ) ) ;
    public final DroidSafeParser.input_event_return input_event() throws RecognitionException {
        DroidSafeParser.input_event_return retval = new DroidSafeParser.input_event_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token cname=null;
        Token rt=null;
        Token mname=null;
        Token COLON8=null;
        Token LPAREN9=null;
        Token RPAREN11=null;
        DroidSafeParser.receiver_return receiver7 =null;

        DroidSafeParser.arg_list_return arg_list10 =null;


        Object cname_tree=null;
        Object rt_tree=null;
        Object mname_tree=null;
        Object COLON8_tree=null;
        Object LPAREN9_tree=null;
        Object RPAREN11_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleSubtreeStream stream_arg_list=new RewriteRuleSubtreeStream(adaptor,"rule arg_list");
        RewriteRuleSubtreeStream stream_receiver=new RewriteRuleSubtreeStream(adaptor,"rule receiver");
        try {
            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:91:3: ( ( receiver )? cname= ID COLON rt= ID mname= ID LPAREN ( arg_list )? RPAREN -> ^( INPUT_EVENT ^( RECEIVER ( receiver )? ) ^( CLASS $cname) ^( RTYPE $rt) ^( METHOD $mname) ^( ARGS ( arg_list )? ) ) )
            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:91:5: ( receiver )? cname= ID COLON rt= ID mname= ID LPAREN ( arg_list )? RPAREN
            {
            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:91:5: ( receiver )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ID) ) {
                    alt3=1;
                }
            }
            else if ( (LA3_0==INT_LITERAL) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:91:5: receiver
                    {
                    pushFollow(FOLLOW_receiver_in_input_event421);
                    receiver7=receiver();

                    state._fsp--;

                    stream_receiver.add(receiver7.getTree());

                    }
                    break;

            }


            cname=(Token)match(input,ID,FOLLOW_ID_in_input_event426);  
            stream_ID.add(cname);


            COLON8=(Token)match(input,COLON,FOLLOW_COLON_in_input_event428);  
            stream_COLON.add(COLON8);


            rt=(Token)match(input,ID,FOLLOW_ID_in_input_event432);  
            stream_ID.add(rt);


            mname=(Token)match(input,ID,FOLLOW_ID_in_input_event436);  
            stream_ID.add(mname);


            LPAREN9=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_input_event438);  
            stream_LPAREN.add(LPAREN9);


            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:91:52: ( arg_list )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CHAR_LITERAL||LA4_0==CLASS||LA4_0==FALSE||LA4_0==ID||LA4_0==INT_LITERAL||LA4_0==STRING_LITERAL||LA4_0==TRUE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:91:52: arg_list
                    {
                    pushFollow(FOLLOW_arg_list_in_input_event440);
                    arg_list10=arg_list();

                    state._fsp--;

                    stream_arg_list.add(arg_list10.getTree());

                    }
                    break;

            }


            RPAREN11=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_input_event443);  
            stream_RPAREN.add(RPAREN11);


            // AST REWRITE
            // elements: arg_list, rt, mname, cname, receiver
            // token labels: mname, rt, cname
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_mname=new RewriteRuleTokenStream(adaptor,"token mname",mname);
            RewriteRuleTokenStream stream_rt=new RewriteRuleTokenStream(adaptor,"token rt",rt);
            RewriteRuleTokenStream stream_cname=new RewriteRuleTokenStream(adaptor,"token cname",cname);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 91:69: -> ^( INPUT_EVENT ^( RECEIVER ( receiver )? ) ^( CLASS $cname) ^( RTYPE $rt) ^( METHOD $mname) ^( ARGS ( arg_list )? ) )
            {
                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:92:9: ^( INPUT_EVENT ^( RECEIVER ( receiver )? ) ^( CLASS $cname) ^( RTYPE $rt) ^( METHOD $mname) ^( ARGS ( arg_list )? ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(INPUT_EVENT, "INPUT_EVENT")
                , root_1);

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:92:24: ^( RECEIVER ( receiver )? )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(RECEIVER, "RECEIVER")
                , root_2);

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:92:35: ( receiver )?
                if ( stream_receiver.hasNext() ) {
                    adaptor.addChild(root_2, stream_receiver.nextTree());

                }
                stream_receiver.reset();

                adaptor.addChild(root_1, root_2);
                }

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:92:46: ^( CLASS $cname)
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CLASS, "CLASS")
                , root_2);

                adaptor.addChild(root_2, stream_cname.nextNode());

                adaptor.addChild(root_1, root_2);
                }

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:92:62: ^( RTYPE $rt)
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(RTYPE, "RTYPE")
                , root_2);

                adaptor.addChild(root_2, stream_rt.nextNode());

                adaptor.addChild(root_1, root_2);
                }

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:92:75: ^( METHOD $mname)
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(METHOD, "METHOD")
                , root_2);

                adaptor.addChild(root_2, stream_mname.nextNode());

                adaptor.addChild(root_1, root_2);
                }

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:92:92: ^( ARGS ( arg_list )? )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(ARGS, "ARGS")
                , root_2);

                // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:92:99: ( arg_list )?
                if ( stream_arg_list.hasNext() ) {
                    adaptor.addChild(root_2, stream_arg_list.nextTree());

                }
                stream_arg_list.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "input_event"


    public static class boolean_value_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "boolean_value"
    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:96:1: boolean_value : ( TRUE -> ^( BOOLEAN_VALUE TRUE ) | FALSE -> ^( BOOLEAN_VALUE FALSE ) );
    public final DroidSafeParser.boolean_value_return boolean_value() throws RecognitionException {
        DroidSafeParser.boolean_value_return retval = new DroidSafeParser.boolean_value_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token TRUE12=null;
        Token FALSE13=null;

        Object TRUE12_tree=null;
        Object FALSE13_tree=null;
        RewriteRuleTokenStream stream_FALSE=new RewriteRuleTokenStream(adaptor,"token FALSE");
        RewriteRuleTokenStream stream_TRUE=new RewriteRuleTokenStream(adaptor,"token TRUE");

        try {
            // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:97:3: ( TRUE -> ^( BOOLEAN_VALUE TRUE ) | FALSE -> ^( BOOLEAN_VALUE FALSE ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==TRUE) ) {
                alt5=1;
            }
            else if ( (LA5_0==FALSE) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:97:5: TRUE
                    {
                    TRUE12=(Token)match(input,TRUE,FOLLOW_TRUE_in_boolean_value509);  
                    stream_TRUE.add(TRUE12);


                    // AST REWRITE
                    // elements: TRUE
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 97:10: -> ^( BOOLEAN_VALUE TRUE )
                    {
                        // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:97:13: ^( BOOLEAN_VALUE TRUE )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(BOOLEAN_VALUE, "BOOLEAN_VALUE")
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_TRUE.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:98:5: FALSE
                    {
                    FALSE13=(Token)match(input,FALSE,FOLLOW_FALSE_in_boolean_value523);  
                    stream_FALSE.add(FALSE13);


                    // AST REWRITE
                    // elements: FALSE
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 98:11: -> ^( BOOLEAN_VALUE FALSE )
                    {
                        // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:98:14: ^( BOOLEAN_VALUE FALSE )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(BOOLEAN_VALUE, "BOOLEAN_VALUE")
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_FALSE.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "boolean_value"


    public static class class_value_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "class_value"
    // /Users/mgordon/research/ds2/src/main/java/droidsafe/speclang/DroidSafe.g:101:1: class_value : CLASS ID -> ID ;
    public final DroidSafeParser.class_value_return class_value() throws RecognitionException {
        DroidSafeParser.class_value_return retval = new DroidSafeParser.class_value_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token CLASS14=null;
        Token ID15=null;

        Object CLASS14_tree=null;
        Object ID15_tree=null;
        RewriteRuleTokenStream stream_CLASS=new RewriteRuleTokenStream(adaptor,"token CLASS");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
